--- a/index.html
+++ b/index.html
@@ -57,46 +57,152 @@
       </div>
 
     </nav>
-    <div class="nav_text fst-italic fw-normal text-center bg-primary text-light p-2">
+    <div class="nav_text fst-italic fs-5 text-center bg-primary text-light p-2">
       Next batch starts in ⌛ 22 Days, Hurry!
     </div>
   </heder>
   <!-- section 2 -->
-  <section class="sec2 d-flex justify-content-between p-5">
+  <section class="sec2 d-flex p-5">
     <div class="ps-5 s2d1">
       <h1 class=" fst-italic mh1">Launch your career with our</h1>
-      <h1 class="fst-italic mh2"><span class="text-primary .sw">Full Stack Developer</span><span class="text-dark"> Courses</span> </h1>
-      <p class="sec2_p ">Curriculum designed and taught by Alumni from IIT’s & Leading Tech Companies</p>
+      <h1 class="fst-italic mh2 "><span class="text-primary .sw">Full Stack Developer</span><span class="text-dark"> Courses</span> </h1>
+      <p class="sec2_p w-50 py-3">Curriculum designed and taught by Alumni from IIT’s & Leading Tech Companies</p>
       <div class="w-100 p-0 m-0 text-start">
         <img class="w-100" src="Features.png" alt="features">
       </div>
 
-      <div class="p-5">
+      <div class="pt-5">
         <div class="acst text-center p-2">
           Made with 💙 by an AccioJob Student
         </div>
       </div>
     </div>
-    <div class="fst-card">
+    <div class="fst-card ps-5 d-flex justify-content-center">
       <div class="card_1 text-center p-3">
         <h1 class="s2h2 fst-italic">Start Attending Live</h1>
         <h1 class="s2h3 fst-italic">Classes for Free!</h1>
-        <p>Live lectures & Assignments curated by <br> Top Tech Proffesionals</p>
+        <p class="fs-5 p-4">Live lectures & Assignments curated by <br> Top Tech Proffesionals</p>
         <from method="post p-3">
-            <div class="pb-3">
-                <i class="fa fa-user fs-4 pe-2 "></i><input class="w-75 fn" type="name" placeholder="Name"><br>
-            </div>
-            <div>
-                 <i class="fa fa-phone fs-4 pe-2 "></i><input class="w-75 fn" type="tel" placeholder="Phone Number">
-            </div>
-           
+          <div class="pb-3">
+            <i class="fa fa-user fs-4 pe-2 "></i><input class="w-75 fn" type="name" placeholder="Name"><br>
+          </div>
+          <div class="py-3">
+            <i class="fa fa-phone fs-4 pe-2 "></i><input class="w-75 fn" type="tel" placeholder="Phone Number">
+          </div>
         </from>
+        <p class="pt-3">By clicking ‘Apply now’, you agree to our</p>
+        <a href="#" class="text-decoration-none text-primary pb-5">
+          <p>Terms & Conditions</p>
+        </a>
       </div>
     </div>
-
-
   </section>
+  <!-- section 3 -->
+  <section class="sec3 w-100 text-center pb-5">
+    <div class="p-4">
+      <p class="s3p fs-4 pt-5 w-100">learn full-stack web development</p>
+      <h2 class="fs-3 text-primary">OUR COURSES</h2>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="card crd_2 border-primary w-25 text-center">
+        <div class="d-flex justify-content-center">
+          <div class=" mpp bg-primary text-light w-50">
+            <p>Ideal For first-time coders</p>
+          </div>
+        </div>
 
+        <h3 class="p-4"><i class="fa fa-seedling pe-2"></i>Beginner</h3>
+        <div class="d-flex justify-content-center">
+          <div class="card text-primary smc me-2 p-1">
+            100% Job Gaurantee
+          </div>
+          <div class="card smc text-primary p-1">
+            Lifetime Access
+          </div>
+
+        </div>
+        <div class="d-flex justify-content-center pt-3 pb-3">
+          <p class=" w-75">For you to start their coding journey from scratch</p>
+        </div>
+        <div class="d_list">
+          <table>
+            <tr class="trb ">
+              <td> <i class="fa fa-briefcase pe-3 fs-5"></i>Placement Starts</td>
+              <td class="pb-3">in 4 Months</td>
+            </tr>
+            <tr class="trb">
+              <td> <i class="fa fa-graduation-cap pe-3 fs-5"></i>Eligibility</td>
+              <td class="pb-3">Final year students or Graduates, All degrees</td>
+            </tr>
+            <tr class="trb">
+              <td><i class="fa fa-clock pe-3 fs-5"></i>Duration</td>
+              <td class="pb-3">12 Months</td>
+            </tr>
+            <tr class="trb">
+              <td><i class="fa fa-book pe-3 fs-5"></i>Daily Effort</td>
+              <td class="pb-3">5-7 hours </td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-play  pe-3 fs-5"></i></i>Next Batch On</td>
+              <td class="pb-3">27th Dec 2022</td>
+            </tr>
+          </table>
+        </div>
+        <div class="d-flex justify-content-around w-100 py-4">
+
+          <button type="button" class="btn  sec3btn border-primary fs-5"><i class="fa fa-download"></i> Brochure</button>
+          <button type="button" class="btn  sec3btn bg-primary text-light fs-5">Learn More<spam class="fs-4"> ></spam></button>
+        </div>
+
+      </div>
+      <div class="card crd_3 w-25 text-center ms-5">
+        <h3 class="p-4"><i class="fa fa-laptop pe-2"></i>Intermediate</h3>
+        <div class="d-flex justify-content-center">
+          <div class="card  smc2 me-2 p-1">
+            Pay After Placement
+          </div>
+          <div class="card smc2 p-1">
+            Lifetime Access
+          </div>
+
+        </div>
+        <div class="d-flex justify-content-center pt-3 pb-3">
+          <p class=" w-100">For learners with good aptitude & logical reasoning</p>
+        </div>
+        <div class="d_list">
+          <table>
+            <tr class="trb ">
+              <td> <i class="fa fa-briefcase pe-3 fs-5"></i>Placement Starts</td>
+              <td class="pb-3">in 4 Months</td>
+            </tr>
+            <tr class="trb">
+              <td> <i class="fa fa-graduation-cap pe-3 fs-5"></i>Eligibility</td>
+              <td class="pb-3">Final year students or Graduates, All degrees</td>
+            </tr>
+            <tr class="trb">
+              <td><i class="fa fa-clock pe-3 fs-5"></i>Duration</td>
+              <td class="pb-3">12 Months</td>
+            </tr>
+            <tr class="trb">
+              <td><i class="fa fa-book pe-3 fs-5"></i>Daily Effort</td>
+              <td class="pb-3">5-7 hours </td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-play  pe-3 fs-5"></i></i>Next Batch On</td>
+              <td class="pb-3">27th Dec 2022</td>
+            </tr>
+          </table>
+        </div>
+        <div class="d-flex justify-content-around w-100 py-4">
+
+          <button type="button" class="btn  sec3btn border-primary fs-5"><i class="fa fa-download"></i> Brochure</button>
+          <button type="button" class="btn  sec3btn bg-primary text-light fs-5">Learn More<spam class="fs-4"> ></spam></button>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
