--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <h1 class=" fst-italic mh1">Launch your career with our</h1>
       <h1 class="fst-italic mh2 "><span class="text-primary .sw">Full Stack Developer</span><span class="text-dark"> Courses</span> </h1>
       <p class="sec2_p w-50 py-3">Curriculum designed and taught by Alumni from IIT’s & Leading Tech Companies</p>
-      <div class="w-100 p-0 m-0 text-start">
-        <img class="w-100" src="Features.png" alt="features">
+      <div class="w-100 p-0 sec2img m-0 text-start">
+        <img class="w-100 sc2im" src="Features.png" alt="features">
       </div>
 
       <div class="pt-5">
@@ -84,7 +84,7 @@
         <p class="fs-5 p-4">Live lectures & Assignments curated by <br> Top Tech Proffesionals</p>
         <from method="post p-3">
           <div class="pb-3">
-            <i class="fa fa-user fs-4 pe-2 "></i><input class="w-75 fn" type="name" placeholder="Name"><br>
+            <i class="fa fa-user fs-4 pe-2 "></i><input class="w-75 fn" type="name" for="Name" placeholder="Name"><br>
           </div>
           <div class="py-3">
             <i class="fa fa-phone fs-4 pe-2 "></i><input class="w-75 fn" type="tel" placeholder="Phone Number">
@@ -202,6 +202,17 @@
       </div>
 
     </div>
+  </section>
+  <!-- section 4 -->
+  <section class="text-center py-5 sec4 w-100">
+    <p class="fs-5 s3p">Over 300+ hiring partners</p>
+    <p class="display-5 s4h">Top Startups & MNC’s Hire </p>
+    <p class="display-5 s4h text-primary">Software Engineer</p>
+    <p class="fs-5">From AccioJob upto 41 Lakhs</p>
+    <div class="pb-5">
+        <img src="Companies Logo.png" alt="company logo">
+    </div>
+    <button class="btn bg-primary s4but text-light fs-5" type="button">Placement Report  ></button>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
