--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="icon" type="image/ico" href="Accio_icon.png">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -65,7 +68,7 @@
   <section class="sec2 d-flex p-5">
     <div class="ps-5 s2d1">
       <h1 class=" fst-italic mh1">Launch your career with our</h1>
-      <h1 class="fst-italic mh2 "><span class="text-primary .sw">Full Stack Developer</span><span class="text-dark"> Courses</span> </h1>
+      <h1 class="fst-italic mh2"><span class="text-primary fst-italic">Full Stack Developer</span><span class="text-dark fst-italic"> Courses</span> </h1>
       <p class="sec2_p w-50 py-3">Curriculum designed and taught by Alumni from IIT’s & Leading Tech Companies</p>
       <div class="w-100 p-0 sec2img m-0 text-start">
         <img class="w-100 sc2im" src="Features.png" alt="features">
@@ -213,6 +216,36 @@
         <img src="Companies Logo.png" alt="company logo">
     </div>
     <button class="btn bg-primary s4but text-light fs-5" type="button">Placement Report  ></button>
+  </section>
+  <!-- section 5 -->
+  <section class="text-center py-5 sec4 w-100">
+    <p class="display-5 s4h">AccioJob Wall Of Love</p>
+    <p class="fs-5">Our Alumni Say it Best</p>
+    <div class="d-flex justify-content-center">
+        <div class="grid">
+            <div class="one">
+                <img src="New Student Wall Cards.png">
+            </div>
+            <div class="two">
+                <img src="New Student Wall Cards (1).png">
+            </div>
+            <div class="three">
+                <img src="New Student Wall Cards (2).png">
+            </div>
+            <div class="four">
+                <img src="New Student Wall Cards (3).png">
+            </div>
+            <div class="five">
+                <img src="New Student Wall Cards (4).png">
+            </div>
+            <div class="six">
+                <img src="New Student Wall Cards (5).png">
+            </div>
+    
+        </div>
+    </div>
+    
+
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
