--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
     Next batch starts in ⌛ 22 Days, Hurry!
   </div>
   <!-- section 2 -->
-  <section id="section2" class="sec2 w-100 d-flex p-5">
+  <section id="section2" class="sec2 w-100 d-flex ps-2 py-5">
     <div id="s2d1" class="ps-5 s2d1">
       <h1 class=" fst-italic mh1">Launch your career with our</h1>
       <h1 class="fst-italic mh2"><span class="text-primary fst-italic">Full Stack Developer</span><span class="text-dark fst-italic"> Courses</span> </h1>
       <p class="sec2_p w-50 py-3">Curriculum designed and taught by Alumni from IIT’s & Leading Tech Companies</p>
-      <div class="w-100 p-0 sec2img m-0 text-start">
-        <img class="w-100 sc2im" src="Features.png" alt="features">
+      <div class="w-100 p-2 sec2img m-0 text-start">
+        <img class="w-100  sc2im" src="Features.png" alt="features">
       </div>
 
       <div class="pt-5">
-        <div class="acst text-center p-2">
+        <div class="acst text-center mt-5 p-2">
           Made with 💙 by an AccioJob Student
         </div>
       </div>
     </div>
     <div id="fst-card " class="fst-card ps-5 d-block justify-content-center">
         <div id="child_crd" class="d-flex justify-content-right text-center">
-            <div id="card_1" class="card_1 w-50 p-3">
+            <div id="card_1" class="card_1  w-50 p-3">
                 <h1 class="s2h2 fst-italic">Start Attending Live</h1>
                 <h1 class="s2h3 fst-italic">Classes for Free!</h1>
                 <p class="fs-5 p-4">Live lectures & Assignments curated by <br> Top Tech Proffesionals</p>
